--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<lombok.version>1.18.16</lombok.version>
+		<apache.version>3.11</apache.version>
 	</properties>
 
 	<dependencies>
@@ -30,6 +31,12 @@
 			<artifactId>lombok</artifactId>
 			<version>${lombok.version}</version>
 			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>${apache.version}</version>
 		</dependency>
 
 
