--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>com.pavelshapel</groupId>
 	<artifactId>randomizer</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 	<name>randomizer</name>
 	<description>service is developed to be able to generate random values</description>
 
