--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,6 +1,7 @@
 management:
   endpoint:
     health:
+      enabled: true
       show-details: always
       status:
         http-mapping:
@@ -9,7 +10,10 @@ management:
           warning: 500
     shutdown:
       enabled: true
+    mappings:
+      enabled: true
   endpoints:
+    enabled-by-default: false
     web:
       exposure:
         include: "*"
