refactor - add dependency org.json

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 		<java.version>1.8</java.version>
 		<lombok.version>1.18.16</lombok.version>
 		<apache.version>3.11</apache.version>
+		<json.version>20201115</json.version>
 	</properties>
 
 	<dependencies>
@@ -33,6 +34,12 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 			<version>${apache.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>${json.version}</version>
 		</dependency>
 
 		<dependency>
