--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,7 @@
 management:
   endpoint:
+    beans:
+      enabled: true
     health:
       enabled: true
       show-details: always
@@ -42,3 +44,5 @@ spring:
     throw-exception-if-no-handler-found: true
   resources:
     add-mappings: false
+  pavelshapel:
+    srteamUtils: true
