--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,6 +26,10 @@ logging:
   level:
     org:
       springframework:
+#        beans:
+#          factory:
+#            support:
+#              DefaultListableBeanFactory: DEBUG
         web:
           servlet:
             DispatcherServlet: INFO
