--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -49,7 +49,13 @@ spring:
   resources:
     add-mappings: false
   pavelshapel:
-    stream-utils: true
-    randomizers: true
-    json-converter: true
-    wrappers: true
+    aop:
+      log-method-result: true
+    json:
+      json-converter: true
+    random:
+      randomizers: true
+    web:
+      wrappers: true
+    stream:
+      stream-utils: true
